examples/errors/unreachable.tw
# Demonstrates unreachable code detection
panic
panic  # warning: unreachable code
panic  # warning: unreachable code
